<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_karto</name>
  <description>
     This package pulls in the Karto mapping library, and provides a ROS
     wrapper for using it.
  </description>
  <version>0.8.1</version>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
  <maintainer email="luc.bettaieb@gmail.com">Luc Bettaieb</maintainer>
  <maintainer email="rtoris@fetchrobotics.com">Russell Toris</maintainer>
  <author>Brian Gerkey</author>
  <license>LGPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>eigen</build_depend>
  
<!--  <build_depend>cmake_modules</build_depend>-->
  <depend>message_filters</depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>open_karto</depend>
  <depend>visualization_msgs</depend>
  <depend>sparse_bundle_adjustment</depend>
  <depend>sensor_msgs</depend>
<!--  <build_depend>rosconsole</build_depend>-->
<!--  <build_depend>roscpp</build_depend>-->
<!--  <build_depend>sparse_bundle_adjustment</build_depend>-->
  <depend>tf2</depend>
<!--  <build_depend>tf</build_depend>-->

<!--  <run_depend>eigen</run_depend>-->
<!--  <run_depend>message_filters</run_depend>-->
<!--  <run_depend>nav_msgs</run_depend>-->
<!--  <run_depend>rosconsole</run_depend>-->
<!--  <run_depend>roscpp</run_depend>-->
<!--  <run_depend>sparse_bundle_adjustment</run_depend>-->
<!--  <run_depend>sensor_msgs</run_depend>-->
<!--  <run_depend>tf</run_depend>-->
<!--  <run_depend>visualization_msgs</run_depend>-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
