<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_karto</name>
  <description>
     This package pulls in the Karto mapping library, and provides a ROS
     wrapper for using it.
  </description>
  <version>0.8.1</version>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
  <maintainer email="luc.bettaieb@gmail.com">Luc Bettaieb</maintainer>
  <maintainer email="rtoris@fetchrobotics.com">Russell Toris</maintainer>
  <author>Brian Gerkey</author>
  <license>LGPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>eigen</build_depend>
  
  <depend>message_filters</depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>open_karto</depend>
  <depend>visualization_msgs</depend>
  <depend>sparse_bundle_adjustment</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
